<resources>
    <string name="app_name">RoadCrackApp</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="signup">Sign Up</string>
    <string name="login_text">Already have an account?</string>
    <string name="tv_cliklog">Login</string>
    <string name="register_text">Don\'t have an account?</string>
    <string name="tv_clikreg">SignUp</string>
    <string name="address">address</string>
    <string name="desc">Deskripsi</string>
    <string name="status">status</string>
    <string name="notif">Notification</string>
    <string name="home">Beranda</string>
    <string name="info">Panduan</string>
    <string name="upload">Upload</string>
    <string name="alert">Pengingat</string>
    <string name="profile">Profile</string>
    <string name="search_here">Search Here</string>
    <string name="login">Login</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="tv_media">Media ( Foto / gambar )</string>
    <string name="btn_media">Kamera</string>
    <string name="tv_mediaother">File ( video , dll ) (optional)</string>
    <string name="btn_mediaother">Tambah File</string>
    <string name="tv_lokasi">Lokasi</string>
    <string name="tv_desc">Keterangan</string>
    <string name="tv_Result">Hasil</string>
    <string name="btn_mediagallery">Galeri</string>
    <string name="tv_title">Judul Report</string>
    <string name="tv_date">Tanggal</string>
    <string name="btn_upload">Upload</string>
    <string name="guide">Panduan Penggunaan</string>
</resources>