<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/info"
        android:title="@string/info"
        android:icon="@drawable/ic_info"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/add"
        android:title="@string/upload"
        android:icon="@drawable/ic_add"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/alert"
        android:title="@string/alert"
        android:icon="@drawable/ic_alert"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/white"/>

</menu>