<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UploadActivity"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="680dp"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:hint="Judul Report"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_media"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCamera"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="1"
                    android:background="@drawable/btn_bg2"
                    android:text="@string/btn_media"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/color_primary"
                    android:textSize="18sp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGallery"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="1"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/btn_bg2"
                    android:text="@string/btn_mediagallery"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/color_primary"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:srcCompat="@drawable/baseline_image_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_Result"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/text_box">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="keterangan"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="akurasi"
                    android:textSize="18sp" />


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/tv_mediaother"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_mediaother"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/btn_bg2"
                android:text="@string/btn_mediaother"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorLink="@color/color_primary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_lokasi"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_lokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_mediaother"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorLink="@color/color_primary"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomBar"
        style="@style/Widget.MaterialComponents.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/text_box2"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>